@@ -352,6 +352,9 @@ See the [Documentation](http://docs.itthinx.com/document/affiliates/) for more d
 
 = 2.18.0 =
 * Enhanced the precision with which referral values are stored.
+* Added the affiliates_get_referral_amount_decimals() function.
+* Fixed the affiliates_referral_amount_decimals filter.
+* We now allow to define the constant AFFILIATES_REFERRAL_AMOUNT_DECIMALS in wp-config.php.
 
 = 2.17.1 =
 * Fixed user_agents table is not deleted on cleanup.
